# toxic-comment-classification

./: .gitignore  pyproject.toml  todo.txt
src/: config.py  test_download.py
src/data/: convert_to_tf.py  download.py  explore.py  preprocess.py
src/modeling/: build.py  train.py
tests/data/: __test_preprocess.py  mock_data.py  test_download.py  test_preprocess.py
